tests/assembler/pass/test13.ial
function qcall void() foo()
{
    block entry
    {
    }
}
