tests/assembler/fail/test9.ial
function qcall unit foo ()
{
    register int32 i;
    register int32 i;

    block entry
    {
    }
}
